2009-05-23 Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSKeyValueObserving.m:
	Permit setters which return values.

2009-05-22 Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSFileManager.m:
	* Source/NSBundle.m:
	Try to get the path right for loading dynamic library code on windows
	when NSExecutable doesn't have the .dll path extension.

2009-05-16 Doug Simons <doug@riverrock.org>

	* Source/NSCalendarDate.m:
	Implement field widths for numeric fields in a date format for
	MacOS-X compatibility.

2009-05-16 Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSURL.m: Add support for file URLs on mswindows.  The path
	may be of the form C:\... rather than /... (and the colon might be
	a vertical bar).
	Also makefile fixes for bug #26446

2009-05-11  Adam Fedor  <fedor@gnu.org>

	* Source/NSXMLParser.m: Fix include location

2009-05-10  Adam Fedor  <fedor@gnu.org>

	* Version 1.19.1

2009-05-06  Adam Fedor  <fedor@gnu.org>

	* Documentation/news.texi, Documentation/releasenotes.texi: Update.

2009-05-04  Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSObject.m: Correct asm for PPC.
	Patch by Eric Wasylishen <ewasylishen@gmail.com>
	* Source/NSObject.m: Add support for new gcc atomic build
	ins. Currently still disabled.
	Patch by David Chisnall <theraven@sucs.org>

2009-05-04 Richard Frith-Macdonald <rfm@gnu.org>

	* NSCharacterSets/GNUmakefile:
	* Source/GNUmakefile:
	* SSL/GNUmakefile:
	* Documentation/GNUmakefile:
	* Resources/GNUmakefile:
	* Examples/GNUmakefile:
	* NSTimeZones/GNUmakefile:
	* GNUmakefile:
	* Tools/GNUmakefile:
        Add help info for the case when gnustep-config can't tell us the
        location of the makefiles.

2009-05-03 Riccardo Mottola <rmottola@users.sf.net>

	* Source/NSURLProtocol.m: Removed c99-ism

2009-05-03 Richard Frith-Macdonald <rfm@gnu.org>

        * Source/GNUmakefile.postamble: remove generated files from pathconfig
        subdirectory on distclean.

2009-04-27 Richard Frith-Macdonald <rfm@gnu.org>
