@@ -1057,7 +1057,12 @@ GSRunLoopInfoForThread(NSThread *aThread)
     }
   if (((NSThread_ivars*)aThread)->_runLoopInfo == nil)
     {
-      ((NSThread_ivars*)aThread)->_runLoopInfo = [GSRunLoopThreadInfo new];
+      [gnustep_global_lock lock];
+      if (((NSThread_ivars*)aThread)->_runLoopInfo == nil)
+        {
+          ((NSThread_ivars*)aThread)->_runLoopInfo = [GSRunLoopThreadInfo new];
+	}
+      [gnustep_global_lock unlock];
     }
   info = ((NSThread_ivars*)aThread)->_runLoopInfo;
   return info;
